# agc-library

./: .env.local  .gitignore  ARCHITECTURAL_IMPROVEMENTS.md  CHANGELOG.md  INSTALL.md  LICENSE  MANIFEST.in  README.md  USAGE_GUIDE.md  demo_trace.json  e2e_demo.py  e2e_demo_local.py  example.py  example_v2.py  pyproject.toml  pytest.ini  requirements.txt  setup.py
agentCore/: __init__.py  cli.py
agentCore/chunking/: __init__.py  chunk_processor.py  text_chunker.py
agentCore/evaluation/: __init__.py  eval_datasets.py  metrics_collector.py  model_comparison.py  prompt_evaluator.py
agentCore/graphs/: __init__.py  graph.py
agentCore/logger/: __init__.py  logger.py
agentCore/observability/: __init__.py  agent_tracer.py  execution_visualizer.py
agentCore/orchestration/: __init__.py  crew_orchestrator.py  orchestrator_factory.py
agentCore/providers/: __init__.py  llm_providers.py
agentCore/reasoning/: __init__.py  chain_of_thought.py  step_by_step.py
agentCore/storage/: __init__.py  base_provider.py  vector_store_factory.py
agentCore/storage/chunking/: chunking_strategies.py
agentCore/storage/providers/: aws_provider.py  chroma_provider.py
agentCore/utils/: __init__.py  api2tool.py  openapi_to_tools.py
demo/: README.md  TECH_DEMO_PRESENTATION.md
demo/cenario1/: chat_simples.py  explicacao_executiva.md
demo/cenario2/: chat_com_rag.py  explicacao_executiva.md
demo/cenario3/: chat_rag_com_tools.py  explicacao_executiva.md
demo/cenario4/: chat_com_langgraph.py  explicacao_executiva.md
demo/cenario5/: crew_agentes.py  explicacao_executiva.md
demo/cenario6/: evals_basico.py  explicacao_executiva.md
demo/cenario7/: evals_avancado.py  explicacao_executiva.md
demo/cenario8/: comparacao_modelos.py  explicacao_executiva.md
demo/cenario9/: comparacao_chunks.py  explicacao_executiva.md
demo_chroma_db/: chroma.sqlite3
examples/: demo_crew_2.py  demo_crewai_ollama.py
tests/e2e/: test_api2tool_scenarios.py  test_chat_scenarios.py
